fix: reduce transition delay for social links visibility

--- a/src/layout/about/About.css
+++ b/src/layout/about/About.css
@@ -130,7 +130,7 @@
   /* social links */
   .about .social-links.hidden {
     transform: translate(0, 2.5rem);
-    transition-delay: 0.2s;
+    transition-delay: 0.1s;
   }
   .about .social-links.show {
     transform: translate(0, 0);
